--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Itim&family=Montserrat&display=swap');
+
+:root{
+    --fuentetitulo:  'Itim', cursive;
+    --fuenteparrafo: 'Montserrat', sans-serif;
+
+    --blanco: #f4f4f4;
+    --negro: #1a1c20 ;
+    --principal: #cf7500;
+    --secundario: #f0a500;
+}
+
 html{
     font-size: 62.25%;
     box-sizing: border-box;
@@ -7,6 +19,22 @@ html{
     box-sizing: inherit;
   }
 
+  body{
+    font-family: var(--fuenteparrafo);
+    font-size: 1.6rem;
+    line-height: 2;
+}
+
+img{
+    max-width: 100%;
+}
+
+a{
+    color: var(--blanco);
+    text-decoration: none;
+}
+
+
   /* A Y U D A S */
 
   .centrado{
@@ -14,4 +42,84 @@ html{
         flex-direction: column; /*  el contenido cambia de arriba hacia abajo, ya no es necesario usar justify content*/
         align-items: center; /* Centra el contenido verticalmente*/
         justify-content: center; /* alinea horizontalmente con display flex*/
+    }
+
+    .contenedor{
+        max-width: 120rem;
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .no-margin{
+        margin: 0;
+    }
+
+    .no-padding{
+        padding: 0;
+    }
+
+    .centrar-texto{
+        text-align: center;
+    }
+
+    /* H E A D E R */
+
+    .header{
+        background-image: url(../img/banner.jpg);
+        height: 60rem;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center; /* es para que el fondo fluya en el centro, y no se desborde a los lados al hacerlo responsive, el primer valor puede ser right o left, el segundo top o botto */
+    }
+
+    .header__color{
+        background-color: var(--negro);
+        width: 100%;
+        height: 100%;
+    }
+
+    .header__texto{
+        text-align: center;
+        color: var(--blanco);
+        padding: 5rem;
+    }
+
+    @media (min-width: 768px ){
+        .barra{
+            display: flex;
+            justify-content: space-between; /* Espacio entre los elementos del logo y los enlaces */
+            align-items: center; /* Alineacion vertical */
+        }
+    .header__texto{
+        padding: 10rem;
+    }
+    }
+
+    .logo{
+        color: var(--blanco);
+
+    }
+
+    .logo__nombre{
+        font-weight: normal;
+    }
+
+    .logo__bold{
+        font-weight: 700;
+
+    }
+
+    .navegacion__enlace{
+        display: block;
+        text-align: center;
+        font-size: 1.8rem;
+        color: var(--blanco);
+    }
+
+    @media (min-width: 768px){
+        .navegacion{
+            display: flex; /* para quitarle el block a los enlaces en distribucion para pc */
+            gap: 3rem;
+        }
+    
     }
