--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
     --negro: #1a1c20 ;
     --principal: #cf7500;
     --secundario: #f0a500;
-    --gris: #DFDFDF;
+    --gris: #EFEEEE;
 }
 
 html{
@@ -303,10 +303,59 @@ h2{
     /* P A G I N A  D E  B E N E F A C T O R E S */
 
     .benef{
-        background-color: var(--gris);
+
+        padding-bottom: 2rem;
     }
 
-    .benef{
-        padding-bottom: 2rem;
+    .benef-info{
+        box-shadow: 0px 9px 35px 0px rgba(0,0,0,0.27);
+
+    }
+
+    .benef-titulo{
+        font-size: 5rem;
+        margin-top: 2rem;
+    }
+
+    .benefactores-lista{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        margin:2rem;
+        gap: 2rem;
+    }
+
+    @media (min-width: 768px ){
+
+        .benefactores-lista{
+            grid-template-columns: repeat(3, 1fr);
+
+        }
         
     }
+
+    .benefactores{
+        padding: 1rem;
+        background-color: var(--negro);
+        box-shadow: 0px 9px 35px 0px rgba(0,0,0,0.27);
+        
+
+    }
+
+    .benefactores:hover{
+        filter: blur(3px);
+        transition: 1s;
+    }
+
+    .benefactores__nombre{
+        color: var(--blanco);
+        text-align: center;
+
+    }
+
+    .benfactores__imagen{
+        display: block;
+        margin: 0 auto;
+        height: 10rem;
+    }
+
+    
