--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
     --principal: #cf7500;
     --secundario: #f0a500;
     --gris: #EFEEEE;
+    
 }
 
 html{
@@ -50,6 +51,11 @@ h2{
     text-align: center;
 }
 
+h4{
+    color: var(--secundario);
+    
+}
+
   /* A Y U D A S */
 
   .centrado{
@@ -73,6 +79,14 @@ h2{
         padding: 0;
     }
 
+    .margin-2{
+        margin: 2rem;
+    }
+
+    .no-margintop{
+        margin-top: 0;
+    }
+
     .centrar-texto{
         text-align: center;
     }
@@ -80,6 +94,24 @@ h2{
 
     .blanco{
         color: var(--blanco);
+    }
+
+    .spacer-20 {
+        width: 100%;
+        height: 20px;
+        display: block;
+        clear: both;
+    }
+
+    .spacer-30 {
+        width: 100%;
+        height: 3rem;
+        display: block;
+        clear: both;
+    }
+
+    .desaparecer{
+        display: none;
     }
 
     /* B o t o n e s */
@@ -358,4 +390,140 @@ h2{
         height: 10rem;
     }
 
+    /* P A G I N A  B E N E F A C T O R */
     
+    .informacion{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        
+    }
+
+    @media (min-width: 768px ){
+        .informacion{
+            flex-direction: row;
+        }
+    }
+
+    .info-benefactor{
+        flex-basis: calc(50% - 2rem);
+    }
+
+    .info-imagen{
+        width: 90%;
+        
+    }
+
+    .boton2{
+        display: block; /* para tomar todo el espacio disponible */
+        font-family: var(--fuenteparrafo);
+        color: var(--blanco);
+        text-align: center; 
+        padding: 1rem 3rem;
+        font-size: 1.8rem;
+        text-transform: uppercase; /* Vuelve a mayusculas el texto */
+        font-weight: 700; /* Bold */
+        margin-bottom: 2rem;
+        border: none;
+        width: 100%;
+    }
+
+    .descripcion{
+        background-color: var(--gris);
+        padding: 1rem 2rem;
+        border-radius: 1rem;
+    }
+
+    .form-solicitud{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+    }
+
+    .campo__label2{
+        flex: 0 0 30rem;
+        padding-right: 1rem;
+        padding: 2rem;
+    }
+
+    .campo__field2{
+        flex: 1; /* toma todo el espacio que quede ya que el factor de crecimiento del hijo campo_label es 0 */
+        border:.1rem solid var(--claro);
+        background-color: var(--gris);
+        width: 100%;
+        padding: 2rem;
+        border-radius: .5rem;
+        outline: none;
+
+    }
+
+    .campo__field2:hover{
+        border: .3rem solid var(--secundario);
+    }
+
+    .campo__field2:focus{
+        color: white;
+        background-color: var(--secundario);
+    }
+
+    form:focus-within {
+        backdrop-filter: blur(.5rem);
+        
+    }
+
+        
+    .campo__field-textarea2{
+        width: 100%;
+        height: 20rem;
+    }
+
+    /* P A G I N A  D E  R E G I S T R O  Y  I N I C I O */
+
+    .header2{
+        background-color: var(--negro);
+        padding: 3rem 0;
+    }
+
+
+
+    .fondogris{
+        background-color: var(--gris);
+    }
+
+    .fondoprimario{
+        background-color: var(--secundario);
+        color: white;
+    }
+
+    .contenedor2{
+        max-width: 120rem;
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    @media (min-width: 768px){
+        .contenedor2{
+            max-width: 60rem;
+            width: 50%;
+            margin: 0 auto;
+        } 
+    }
+
+    .fondoblanco{
+        background-color: var(--blanco);
+        border-radius: .5rem;
+        box-shadow: 0px 0px 13px -3px rgba(0,0,0,0.30);
+        /*         box-shadow: 0px 0px 13px -3px rgba(0,0,0,0.39);
+ */
+        /*         box-shadow: 0px 0px 25px -5px rgba(0,0,0,0.73);
+ */
+    }
+
+    .barrita{
+        margin: -1rem;
+        height: .5rem;
+        min-width: 100%;
+        background-color: var(--secundario);
+    }
