--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,11 @@ textarea {
         display: none;
     }
 
+    .userindex-img{
+        width: 20rem;
+        
+        
+    }
     /* B o t o n e s */
 
 
